--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -2,8 +2,9 @@
     background-color: #CE2829;
     align-items: center;
     width: 100%;
-    padding-top: 5%;
-    padding-bottom: 2%;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    height: 4rem;
 }
 
 .header > img {
