--- a/src/styles/PizzaOrderForm.css
+++ b/src/styles/PizzaOrderForm.css
@@ -39,6 +39,14 @@ p {
     font-size: 30px;
 }
 
+.input-bar{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 30rem;
+    border-radius: 1rem;
+    border: 2px solid black;
+}
+
 .count-div{
     display: flex;
     align-items: center;
