--- a/src/styles/SuccessPage.css
+++ b/src/styles/SuccessPage.css
@@ -2,7 +2,7 @@
     background-color: #CE2829;
     padding-top: 2%;
     text-align: center;
-    height: 80vh;
+    height: calc(100vh - 9rem);
     width: 100%;
     display:flex;
     flex-direction: column;
